--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,13 +1,57 @@
+@import url('https://fonts.googleapis.com/css2?family=Italiana&family=Junge&family=Kaisei+HarunoUmi:wght@400;500;700&display=swap');
+
+//fonts
+$heading: 'Italiana', serif;
+$heading2: 'Kaisei HarunoUmi', serif;
+$menu: 'Junge', serif;
+
+// Colors
 $olive: #9E6C16;
 $strong-wine: #B11226;
 $dark-wine: #58181F;
 $dark: #120204;
-
+//Estilos generales
 body{
     background-color: $dark;
     color: white;
 }
+h1{
+    font-family: $heading;
+}
+h2{
+    font-family: $heading2;
+}
 section{
     min-height: 100vh;
     background-color: $dark;
+}
+
+// estilos especificos
+.wine-bottle{
+    padding: .7rem 0;
+
+    ul li{
+        list-style-type: none;
+        font-size: 1.2rem;
+    }
+
+
+    .img-center{
+        margin: 0 auto;
+        text-align: center;
+        padding: .5rem;
+    }
+    img{
+        height: 200px;
+    }
+    .bottle-img, h3, h4{
+        text-align: center;
+    }
+    .buy{
+        display:flex;
+        justify-content:center;
+        button{
+            padding: .7rem 1rem;
+        }
+    }
 }
