--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@ $menu: 'Junge', serif;
 $olive: #9E6C16;
 $strong-wine: #B11226;
 $dark-wine: #58181F;
+$card-dark-wine: #140305;;
 $dark: #120204;
 //Estilos generales
 body{
@@ -27,31 +28,60 @@ section{
 }
 
 // estilos especificos
-.wine-bottle{
-    padding: .7rem 0;
-
-    ul li{
-        list-style-type: none;
+.bg-traslucent{
+    background-color:#1202049d;
+    a{
+        color: $strong-wine;
+        &:hover{
+            color: white;
+        }
+    }
+}
+.red-icon{
+    color: $strong-wine;
+    font-size: 3rem;
+}
+.catalogo{
+    box-sizing: border-box;
+    margin: .7rem;
+    .catalogo-menu{
         font-size: 1.2rem;
-    }
-
-
-    .img-center{
-        margin: 0 auto;
-        text-align: center;
-        padding: .5rem;
-    }
-    img{
-        height: 200px;
-    }
-    .bottle-img, h3, h4{
-        text-align: center;
-    }
-    .buy{
-        display:flex;
+        list-style-type: none;
         justify-content:center;
-        button{
-            padding: .7rem 1rem;
+        span{
+            padding: .5rem;
+        }
+    }
+    .wine-bottle{
+        font-family: 'Kaisei HarunoUmi', serif;
+        background-color: $card-dark-wine;
+        padding: .7rem 0;
+        box-shadow: 0px 3px 15px rgba(0,0,0,0.3);
+        margin: .7rem 0;
+    
+        ul li{
+            list-style-type: none;
+            font-size: 1.2rem;
+        }
+    
+    
+        .img-center{
+            margin: 0 auto;
+            text-align: center;
+            padding: .5rem;
+        }
+        img{
+            height: 200px;
+        }
+        .bottle-img, h3, h4{
+            text-align: center;
+        }
+        .buy{
+            display:flex;
+            justify-content:center;
+            button{
+                padding: .7rem 1rem;
+            }
         }
     }
 }
