Basic structure for Landing Pages and NavBar

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,75 +13,41 @@ $card-dark-wine: #140305;;
 $dark: #120204;
 //Estilos generales
 body{
-    background-color: $dark;
-    color: white;
+    margin: 0;
+    font-family: $menu;
 }
-h1{
-    font-family: $heading;
+#logo{
+    height:5rem;
 }
-h2{
-    font-family: $heading2;
+#menu-icon{
+    filter: invert(12%) sepia(74%) saturate(4962%) hue-rotate(344deg) brightness(93%) contrast(96%);
+    height: 3rem;
 }
-section{
-    min-height: 100vh;
-    background-color: $dark;
-}
-
-// estilos especificos
-.bg-traslucent{
-    background-color:#1202049d;
-    a{
-        color: $strong-wine;
-        &:hover{
-            color: white;
-        }
+.navbar{
+    background-color: #120204;
+    .navbar-flex{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .hide{
+        display:none;
     }
 }
-.red-icon{
-    color: $strong-wine;
-    font-size: 3rem;
-}
-.catalogo{
-    box-sizing: border-box;
-    margin: .7rem;
-    .catalogo-menu{
-        font-size: 1.2rem;
-        list-style-type: none;
-        justify-content:center;
-        span{
-            padding: .5rem;
+.container{
+    section{
+        min-height: 100vh;
+        .text-box{
+            width: 80%;
+            padding: .7rem;
+            background-color: $dark;
+            color: #B11226;
         }
     }
-    .wine-bottle{
-        font-family: 'Kaisei HarunoUmi', serif;
-        background-color: $card-dark-wine;
-        padding: .7rem 0;
-        box-shadow: 0px 3px 15px rgba(0,0,0,0.3);
-        margin: .7rem 0;
-    
-        ul li{
-            list-style-type: none;
-            font-size: 1.2rem;
-        }
-    
-    
-        .img-center{
-            margin: 0 auto;
-            text-align: center;
-            padding: .5rem;
-        }
-        img{
-            height: 200px;
-        }
-        .bottle-img, h3, h4{
-            text-align: center;
-        }
-        .buy{
-            display:flex;
-            justify-content:center;
-            button{
-                padding: .7rem 1rem;
-            }
-        }
+    .landing{
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
