--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@ $strong-wine: #B11226;
 $dark-wine: #58181F;
 $card-dark-wine: #140305;;
 $dark: #120204;
+$lblue: #0075C4;
 //Estilos generales
 body{
     margin: 0;
@@ -52,5 +53,47 @@ body{
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+}
+
+#shop{
+    background-color: $dark;
+    color: white;
+    .wine{
+        display: flex;
+            flex-flow: column nowrap;
+            align-items: center;
+        max-width: 230px;
+        .img-wrapper{
+            text-align: center;
+            height:15rem;
+            img{
+                height: 100%;
+            }
+        }
+        .content{
+            display: flex;
+            flex-flow: column nowrap;
+            h1,h2{
+                text-align: center;
+            }
+            h2{
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 1; /* number of lines to show */
+                        line-clamp: 1;
+                -webkit-box-orient: vertical;
+            }
+            a{
+                text-decoration: none;
+                color: white;
+                align-self: center;
+                padding: .5rem 1.2rem;
+                border-radius: 1.2rem;
+                background-color: $lblue ;
+            }
+        }
+        
     }
 }
