--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,28 +2,115 @@
 body {
   margin: 0;
   font-family: "Junge", serif;
-  background-color: rgb(7, 7, 7);
 }
 
 #logo {
-  height: 5rem;
+  top: 2vh;
+  left: 2vh;
+  height: 13vh;
+  position: relative;
+  z-index: 1000;
 }
 
 #menu-icon {
-  filter: invert(12%) sepia(74%) saturate(4962%) hue-rotate(344deg) brightness(93%) contrast(96%);
-  height: 3rem;
+  cursor: pointer;
+  z-index: 1000;
+  background-color: #120204;
+}
+
+.menu {
+  flex-direction: column;
+  cursor: pointer;
+  z-index: 1000;
+  background-color: #120204;
+  position: fixed;
+  right: 4vh;
+  top: 4vh;
+  transition: 0.3s;
+}
+
+.hide-menu {
+  position: fixed;
+  top: 4vh;
+  right: 4vh;
+  transition: 0.3s;
+}
+
+.line1,
+.line2,
+.line3 {
+  width: 10vh;
+  height: 1.6vh;
+  margin: 2px;
+  background-color: #B11226;
+  transition: 0.3s;
+}
+
+.hide .line1 {
+  transform: translate(0, 2vh) rotate(-405deg);
+  position: fixed;
+}
+
+.hide .line2 {
+  opacity: 0;
+  transform: rotate(360deg);
+  position: relative;
+}
+
+.hide .line3 {
+  transform: rotate(405deg);
+  position: fixed;
 }
 
 .navbar {
   background-color: #120204;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 15vh;
 }
 .navbar .navbar-flex {
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
-.navbar .hide {
-  display: none;
+.navbar .desplegable {
+  position: fixed;
+  font-family: var("Kaisei HarunoUmi", serif);
+  list-style: none;
+  font-size: x-large;
+  font-style: italic;
+  text-align: center;
+  transition: transform 0.3s ease;
+  transform: translate(0, -100%);
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #120204;
+}
+.navbar .desplegable .linea-contenido-sola {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  display: block;
+  margin-top: 5%;
+}
+
+.linea-contenido-sola {
+  background-image: linear-gradient(#ffffff, #120204);
+  background-position: 0% 100%;
+  background-repeat: no-repeat;
+  background-size: 0% 2px;
+  transition: background-size 0.3s;
+}
+
+.linea-contenido-sola:hover, .linea-contenido-sola:focus {
+  background-size: 100% 2px;
+}
+
+.desplegable.active {
+  top: 15%;
+  background-color: #120204;
+  transform: translate(0, 0);
 }
 
 .container {
@@ -45,120 +132,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-#featured {
-  background-image: url("../../public/img/backgrounds/marvin-l-61sZcZl3Mlk-unsplash (1).jpg");
-  background-position: center center;
-  object-fit: cover;
-  display: flex;
-  flex-flow: row;
-  justify-content: space-around;
-}
-#featured p {
-  color: white;
-}
-#featured .title {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  width: 40%;
-  order: 2;
-  text-align: center;
-}
-#featured .title h1 {
-  color: #B11226;
-}
-#featured .title h2 {
-  color: #9E6C16;
-}
-#featured .img-wrapper {
-  order: 3;
-  display: flex;
-  align-items: center;
-}
-#featured .menu-wrapper {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-}
-#featured .menu-wrapper ul {
-  height: 60%;
-  order: 1;
-  color: white;
-  list-style-type: none;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-around;
-}
-
-#shop {
-  display: grid;
-  justify-items: center;
-  align-items: center;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  background-color: #120204;
-  color: white;
-}
-#shop .wine {
-  background-color: #140305;
-  padding: 0.7rem;
-  display: flex;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-  flex-flow: column nowrap;
-  align-items: center;
-  max-width: 250px;
-}
-#shop .wine .img-wrapper {
-  text-align: center;
-  height: 15rem;
-}
-#shop .wine .img-wrapper img {
-  height: 100%;
-}
-#shop .wine .content {
-  display: flex;
-  flex-flow: column nowrap;
-}
-#shop .wine .content h1, #shop .wine .content h2 {
-  margin: 0.2rem;
-  text-align: center;
-}
-#shop .wine .content h1, #shop .wine .content h2 {
-  text-transform: uppercase;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 1; /* number of lines to show */
-  line-clamp: 1;
-  -webkit-box-orient: vertical;
-}
-#shop .wine .content ul li {
-  list-style-type: none;
-  font-size: 1.2rem;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 1; /* number of lines to show */
-  line-clamp: 1;
-  -webkit-box-orient: vertical;
-}
-#shop .wine .content ul li img {
-  height: 1.2rem;
-}
-#shop .wine .content a {
-  text-decoration: none;
-  color: white;
-  align-self: center;
-  padding: 0.5rem 1.2rem;
-  border-radius: 1.2rem;
-  background-color: #0075C4;
-  transition: 250ms ease-in-out;
-}
-#shop .wine .content a:hover {
-  background-color: white;
-  color: #58181F;
 }
 
 /*# sourceMappingURL=main.css.map */
