--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@ $strong-wine: #B11226;
 $dark-wine: #58181F;
 $card-dark-wine: #140305;;
 $dark: #120204;
+$lblue: #0075C4;
 //Estilos generales
 body{
     margin: 0;
@@ -142,3 +143,120 @@ body{
         align-items: center;
     }
 }
+
+
+#featured{
+    
+    background-image: url('../../public/img/backgrounds/marvin-l-61sZcZl3Mlk-unsplash\ \(1\).jpg');
+    background-position:center center;
+    object-fit: cover;
+
+    display: flex;
+    flex-flow: row;
+    justify-content: space-around;
+    p{
+        color: white;
+    }
+    .title{
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: center;
+        width: 40%;
+        order: 2;
+        text-align: center;
+        h1{
+            color: $strong-wine;
+        }
+        h2{
+            color: $olive;
+        }
+        
+    }
+    .img-wrapper{
+        order: 3;
+        display: flex;
+        align-items: center;
+    }
+    .menu-wrapper{
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        ul{
+            height: 60%;
+            order:1;
+            color: white;
+            list-style-type: none;
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: space-around;
+        }
+    }
+}
+
+#shop{
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
+    background-color: $dark;
+    color: white;
+    .wine{
+        background-color: $card-dark-wine;
+        padding: .7rem;
+        display: flex;
+        margin-top: .5rem;
+        margin-bottom: .5rem;
+            flex-flow: column nowrap;
+            align-items: center;
+        max-width: 250px;
+        .img-wrapper{
+            text-align: center;
+            height:15rem;
+            img{
+                height: 100%;
+            }
+        }
+        .content{
+            display: flex;
+            flex-flow: column nowrap;
+            h1,h2{
+                margin: .2rem;
+                text-align: center;
+            }
+            h1, h2{
+                text-transform: uppercase;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 1; /* number of lines to show */
+                        line-clamp: 1;
+                -webkit-box-orient: vertical;
+            }
+            ul li{
+                list-style-type: none;
+                font-size: 1.2rem;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 1; /* number of lines to show */
+                        line-clamp: 1;
+                -webkit-box-orient: vertical;
+                img{
+                    height: 1.2rem;
+                }
+            }
+            a{
+                text-decoration: none;
+                color: white;
+                align-self: center;
+                padding: .5rem 1.2rem;
+                border-radius: 1.2rem;
+                background-color: $lblue;
+                transition: 250ms ease-in-out;
+                &:hover{
+                    background-color: white;
+                    color: $dark-wine;
+                }
+            }
+        }
+    }
+}   
