--- a/src/css/main.css
+++ b/src/css/main.css
@@ -27,14 +27,12 @@ body {
   position: fixed;
   right: 4vh;
   top: 4vh;
-  transition: 0.3s;
 }
 
 .hide-menu {
   position: fixed;
   top: 4vh;
   right: 4vh;
-  transition: 0.3s;
 }
 
 .line1,
@@ -100,7 +98,7 @@ body {
 }
 
 #linea-contenido1 {
-  margin-top: 25vh;
+  margin-top: 20vh;
 }
 
 .linea-contenido-sola {
@@ -112,7 +110,7 @@ body {
 }
 
 .linea-contenido-sola:hover, .linea-contenido-sola:focus {
-  background-size: 100% 2px;
+  background-size: 100% 0.2vh;
 }
 
 .desplegable.active {
