--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -40,13 +40,11 @@ body{
     position: fixed;
     right: 4vh;
     top: 4vh;
-    transition: 0.3s;
 }
 .hide-menu{
     position: fixed;
     top: 4vh;
     right: 4vh;
-    transition: 0.3s;
 }
     
 .line1,
@@ -115,7 +113,7 @@ body{
             }
     }
 #linea-contenido1{
-    margin-top: 25vh;
+    margin-top: 20vh;
 }
 .linea-contenido-sola{
     background-image: linear-gradient(#ffffff, $dark);
@@ -126,7 +124,7 @@ body{
     
 }
 .linea-contenido-sola:hover, .linea-contenido-sola:focus {
-    background-size: 100% 2px;
+    background-size: 100% 0.2vh;
 }
 
 .desplegable.active{
